--- a/Etapa 3/loja-react-app/package.json
+++ b/Etapa 3/loja-react-app/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "loja-react-app",
   "version": "1.0.0",
   "main": "index.ts",
@@ -10,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "53.0.20",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
     "react-dom": "19.0.0",
-    "react-native-web": "expo/metro-runtime",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.13.1",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
